[package]
name = "threadpool-bench"
version = "0.1.0"
authors = ["Cora Sherratt <cora.sherratt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
threadpool = "1.7.1"
threadpool-crossbeam-channel = "1.8.0"
cpu-time = "1.0.0"
num_cpus = "1.12.0"
rayon = "1.3.0"